--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </div>
     </div>
 
-
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
 
     <!-- Script-->
     <script src="script.js"></script>
