--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quote Generator</title>
     <link rel="icon" type="image/png" href="https://cveigt.github.io/img/favicon.svg">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   </head>
   <body>
+    <div class="quote-container" id="quote-container">
+      <!-- Quote -->
+      <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span class="quote">Ever loved someone so much, you would do anything for them? Yeah, well make that someone yourself and do whatever the hell you want.</span>
+      </div>
+      <!-- Author -->
+      <div class="quote-author">
+        <span class="author">Harvey Specter</span>
+      </div>
+      <!-- Buttons -->
+      <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet this!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button class="new-quote">New Quote</button>
+      </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
